--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -10,39 +10,71 @@
 
   <!-- {% load static %}
   <link rel="stylesheet" href="{% static 'css/main.css' %}"> -->
-  <link rel="stylesheet" href="../../../static/css/main.css">
+  <link rel="stylesheet" href="../../../static/css/main.css" />
 </head>
 
 <body>
   <header>
-     <video  loop muted playsinline class="background-video">
+    <video loop muted playsinline class="background-video">
       <source
         src="https://v4.cdnpk.net/videvo_files/video/free/video0485/large_watermarked/_import_61b593756995c2.98061119_FPpreview.mp4"
-        type="video/mp4">
+        type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <div class="container header-container">
       <!-- <h1>Coding India</h1>
       <p>Empowering India With Technology</p> -->
       <h1 class="animate-charcter">Coding India</h1>
-      <h3 class="span loader waviy"><span class="m">E</span><span class="m">M</span><span class="m">P</span><span class="m">O</span><span class="m">W</span><span class="m">E</span><span class="m">R</span><span class="m">&nbsp;</span><span class="m">I</span><span class="m">N</span><span class="m">D</span><span class="m">I</span><span class="m">A</span><span class="m">&nbsp;</span><span class="m">W</span><span class="m">I</span><span class="m">T</span><span class="m">H</span><span class="m">&nbsp;</span> <span class="m">T</span><span class="m">E</span><span class="m">C</span><span class="m">H</span><span class="m">N</span><span class="m">O</span><span class="m">L</span><span class="m">O</span><span class="m">G</span><span class="m">I</span><span class="m">E</span><span class="m">S</span></h3>
+      <h3 class="span loader waviy">
+        <span class="m">E</span><span class="m">M</span><span class="m">P</span><span class="m">O</span><span
+          class="m">W</span><span class="m">E</span><span class="m">R</span><span class="m">&nbsp;</span><span
+          class="m">I</span><span class="m">N</span><span class="m">D</span><span class="m">I</span><span
+          class="m">A</span><span class="m">&nbsp;</span><span class="m">W</span><span class="m">I</span><span
+          class="m">T</span><span class="m">H</span><span class="m">&nbsp;</span> <span class="m">T</span><span
+          class="m">E</span><span class="m">C</span><span class="m">H</span><span class="m">N</span><span
+          class="m">O</span><span class="m">L</span><span class="m">O</span><span class="m">G</span><span
+          class="m">I</span><span class="m">E</span><span class="m">S</span>
+      </h3>
     </div>
 
     <div class="container" id="header-nav">
       <ul>
-        <li><h4><a href="">Website Development</a></h4></li>
-        <li><h4><a href="">Machine Learning</a></h4></li>
-        <li><h4><a href="">Artificial Intelligence</a></h4></li>
+        <li>
+          <h4><a href="">Website Development</a></h4>
+        </li>
+        <li>
+          <h4><a href="">Machine Learning</a></h4>
+        </li>
+        <li>
+          <h4><a href="">Artificial Intelligence</a></h4>
+        </li>
       </ul>
     </div>
   </header>
 
+  <section>
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="https://images.unsplash.com/photo-1628258334105-2a0b3d6efee1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8aW5kaWFuJTIweW91dGglMjBjb2Rpbmd8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+        </div>
+        <div class="col-lg-6">
+          <h1 class="display-5 fw-bold lh-1 mb-3 headings" >Elevating Youth through Coding</h1>
+          <p class="lead">Welcome to our platform dedicated to <strong>"Empowering India with Technology."</strong> Our mission is to harness the transformative potential of technology to uplift the youth of India and drive the nation towards progress. We firmly believe in the power of coding and its ability to shape the future.</p>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <button type="button" class="btn btn-outline-success btn-lg px-4 me-md-2">Start Learning</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
 
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
