--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -27,13 +27,14 @@
       <h1 class="animate-charcter">Coding India</h1>
       <h3 class="span loader waviy">
         <span class="m">E</span><span class="m">M</span><span class="m">P</span><span class="m">O</span><span
-          class="m">W</span><span class="m">E</span><span class="m">R</span><span class="m">&nbsp;</span><span
-          class="m">I</span><span class="m">N</span><span class="m">D</span><span class="m">I</span><span
-          class="m">A</span><span class="m">&nbsp;</span><span class="m">W</span><span class="m">I</span><span
-          class="m">T</span><span class="m">H</span><span class="m">&nbsp;</span> <span class="m">T</span><span
-          class="m">E</span><span class="m">C</span><span class="m">H</span><span class="m">N</span><span
-          class="m">O</span><span class="m">L</span><span class="m">O</span><span class="m">G</span><span
-          class="m">I</span><span class="m">E</span><span class="m">S</span>
+          class="m">W</span><span class="m">E</span><span class="m">R</span><span class="m">I</span><span
+          class="m">N</span><span class="m">G</span><span class="m">&nbsp;</span><span class="m">I</span><span
+          class="m">N</span><span class="m">D</span><span class="m">I</span><span class="m">A</span><span
+          class="m">&nbsp;</span><span class="m">W</span><span class="m">I</span><span class="m">T</span><span
+          class="m">H</span><span class="m">&nbsp;</span> <span class="m">T</span><span class="m">E</span><span
+          class="m">C</span><span class="m">H</span><span class="m">N</span><span class="m">O</span><span
+          class="m">L</span><span class="m">O</span><span class="m">G</span><span class="m">I</span><span
+          class="m">E</span><span class="m">S</span>
       </h3>
     </div>
 
@@ -53,21 +54,36 @@
   </header>
 
   <section>
-    <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="https://images.unsplash.com/photo-1628258334105-2a0b3d6efee1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8aW5kaWFuJTIweW91dGglMjBjb2Rpbmd8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-        </div>
-        <div class="col-lg-6">
-          <h1 class="display-5 fw-bold lh-1 mb-3 headings" >Elevating Youth through Coding</h1>
-          <p class="lead">Welcome to our platform dedicated to <strong>"Empowering India with Technology."</strong> Our mission is to harness the transformative potential of technology to uplift the youth of India and drive the nation towards progress. We firmly believe in the power of coding and its ability to shape the future.</p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-outline-success btn-lg px-4 me-md-2">Start Learning</button>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+
+    <section>
+      <div id="parallax" class="parallax-item">
+        <!-- <h2>Div 1</h2> -->
+        <div class="container row">
+          <div class="col-md-6">
+            <h2>Elevating Youth through Coding</h2>
+            <p>Welcome to our platform dedicated to "Empowering India with Technology." Our mission is to harness the
+              transformative potential of technology to uplift the youth of India and drive the nation towards progress.
+              We firmly believe in the power of coding and its ability to shape the future.</p>
+            <div class="btn-group">
+              <a href="" class="btn btnstyle">Learn Coding</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="{% static 'images/web2.png' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
-    </div>
-
+        <div class="parallax-item">
+          <h2>Div 2</h2>
+        </div>
+        <div class="parallax-item">
+          <h2>Div 3</h2>
+        </div>
+        <div class="parallax-item">
+          <h2>Div 4</h2>
+        </div>
+    </section>
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
