--- a/CodingIndia/blogs/templates/blogs/index.html
+++ b/CodingIndia/blogs/templates/blogs/index.html
@@ -6,42 +6,16 @@
 <title>Blogs - Coding India</title>
 {% endblock title %}
 
-
-{% block css %}
-<style>
-    .blog-head-img {
-        height: 150px;
-        width: 100%;
-        border-radius: 15px;
-    }
-</style>
-
-<link rel="stylesheet" href="{% static 'css/main.css' %}">
-
-{% endblock css %}
-
 {% block content %}
 
 
-<section class="mt-4">
-    <!-- <h1 class="text-center mb-3 text-success"
-        style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 600;">POPULAR
-        BLOG</h1> -->
 
-    <div class="p-4 p-md-5 mb-4 text-white row rounded bg-dark">
-        <div class=" px-0 d-flex">
-            <div class="content col-md-9">
-                <h1 class="display-4 fst-italic" style="font-size: 2.5rem;">{{ran.title}}</h1>
-                <p>{{ran.pub_date}}</p>
-                <p class="lead mb-0"><a href=""
-                        class="fw-bold btn signupbtn">Continue
-                        reading...</a></p>
-            </div>
-            <div class="imgs col-md-3">
-                <img class="blog-head-img" src="{{ran.img.url}}" alt="">
-            </div>
-        </div>
-    </div>
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+
+
+<section class="mt-4">
 
     <div class="container">
         <h1 class="text-center mb-3 servicetitle"
@@ -62,7 +36,7 @@
     </div>
 
 
-    <div class="container">
+    <div class="container mb-3">
         <h1 class="text-center mb-3 mt-4 servicetitle"
             style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 600;">OUR
             BLOGS</h1>
