--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -8,12 +8,18 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <!-- {% load static %}
   <link rel="stylesheet" href="{% static 'css/main.css' %}"> -->
+  {% block css %}
   <link rel="stylesheet" href="../../../static/css/main.css" />
+  {% endblock css %}
+
 </head>
 
 <body>
+  {% block content %}
   <header>
     <video loop muted playsinline class="background-video">
       <source
@@ -58,7 +64,6 @@
 
     <section>
       <div id="parallax" class="parallax-item">
-        <!-- <h2>Div 1</h2> -->
         <div class="container row">
           <div class="col-md-6">
             <h2>Elevating Youth through Coding</h2>
@@ -66,7 +71,7 @@
               transformative potential of technology to uplift the youth of India and drive the nation towards progress.
               We firmly believe in the power of coding and its ability to shape the future.</p>
             <div class="btn-group">
-              <a href="" class="btn btnstyle">Learn Coding</a>
+              <a href="" class="btnstyle">Learn Coding</a>
             </div>
           </div>
           <div class="col-md-6">
@@ -74,15 +79,232 @@
           </div>
         </div>
       </div>
-        <div class="parallax-item">
-          <h2>Div 2</h2>
+      <div class="parallax-item">
+        <div class="container row">
+          <div class="col-md-6">
+            <img src="{% static 'images/web.png' %}" alt="" class="img-fluid ">
+          </div>
+          <div class="col-md-6">
+            <h2>Coding: The Gateway to Possibilities</h2>
+            <p>Coding is more than just lines of text; it's the language of possibilities. From developing apps that
+              solve real-world challenges to designing websites that redefine user experiences, coding empowers the
+              youth to turn their ideas into reality. With technology as the canvas and coding as the brush, they have
+              the means to craft a better tomorrow.</p>
+            <div class="btn-group">
+              <a href="" class="btnstyle">Learn Coding</a>
+            </div>
+          </div>
         </div>
-        <div class="parallax-item">
-          <h2>Div 3</h2>
+      </div>
+      <div class="parallax-items">
+        <div class="textitem">
+          <h2>Coding Courses</h2>
+          <p>Unlock your potential with our transformative coding courses, designed to empower Indian youth with the
+            skills to shape a tech-driven future.</p>
         </div>
-        <div class="parallax-item">
-          <h2>Div 4</h2>
+        <div class="container mt-5">
+          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+          <div class="section_our_solution">
+            <div class="row">
+              <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="our_solution_category">
+                  <div class="solution_cards_box">
+                    <div class="solution_card">
+                      <div class="hover_color_bubble"></div>
+                      <div class="so_top_icon">
+                        <img src="{% static 'images/python.png' %}" alt="Learn Python">
+                      </div>
+                      <div class="solu_title">
+                        <h3>Python</h3>
+                      </div>
+                      <div class="solu_description">
+                        <p>
+                          Master the language of innovation with our Python coding course.
+                        </p>
+                        <button type="button" class="read_more_btn">Read More</button>
+                      </div>
+                    </div>
+                    <div class="solution_card">
+                      <div class="hover_color_bubble"></div>
+                      <div class="so_top_icon">
+                        <img src="{% static 'images/js.png' %}" alt="Learn JavaScript">
+
+                      </div>
+                      <div class="solu_title">
+                        <h3>JavaScript</h3>
+                      </div>
+                      <div class="solu_description">
+                        <p>
+                          Discover the magic of web interactivity with our JavaScript learning journey.
+                        </p>
+                        <button type="button" class="read_more_btn">Read More</button>
+                      </div>
+                    </div>
+                  </div>
+                  <!--  -->
+                  <div class="solution_cards_box sol_card_top_3">
+                    <div class="solution_card">
+                      <div class="hover_color_bubble"></div>
+                      <div class="so_top_icon">
+                        <img src="{% static 'images/mysql.png' %}" alt="Learn MySQL">
+                      </div>
+                      <div class="solu_title">
+                        <h3>MySQL</h3>
+                      </div>
+                      <div class="solu_description">
+                        <p>
+                          Dive into data mastery with our MySQL course for efficient database management.
+                        </p>
+                        <button type="button" class="read_more_btn">Read More</button>
+                      </div>
+                    </div>
+                    <div class="solution_card">
+                      <div class="hover_color_bubble"></div>
+                      <div class="so_top_icon">
+                        <img src="{% static 'images/ml.png' %}" alt="Learn Machine Learning">
+                      </div>
+                      <div class="solu_title">
+                        <h3>Machine Learning/h3>
+                      </div>
+                      <div class="solu_description">
+                        <p>
+                          Explore the future of technology through our Machine Learning expertise.
+                        </p>
+                        <button type="button" class="read_more_btn">Read More</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+
+
+      {% endblock content %}
+      <!-- Remove the container if you want to extend the Footer to full width. -->
+      <div class="containers">
+        <!-- Footer -->
+        <footer class="text-center text-lg-start text-white bg-dark" >
+          <!-- Grid container -->
+          <div class="container p-4 pb-0">
+            <!-- Section: Links -->
+            <section class="">
+              <!--Grid row-->
+              <div class="row">
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                  <h6 class="text-uppercase mb-4 font-weight-bold">
+                    Coding India
+                  </h6>
+                  <p>
+                    Welcome to Coding India – Your Gateway to Tech Excellence. 🚀 Embark on a transformative journey
+                    through coding, where innovation knows no bounds.
+                  </p>
+                </div>
+                <!-- Grid column -->
+
+                <hr class="w-100 clearfix d-md-none" />
+
+                <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                  <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+                  <p>
+                    <a class="text-white">Website Development</a>
+                  </p>
+                  <p>
+                    <a class="text-white">ML</a>
+                  </p>
+                  <p>
+                    <a class="text-white">DBMS</a>
+                  </p>
+                  <p>
+                    <a class="text-white">AI</a>
+                  </p>
+                </div>
+                <!-- Grid column -->
+
+                <hr class="w-100 clearfix d-md-none" />
+
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                  <h6 class="text-uppercase mb-4 font-weight-bold">
+                    Useful links
+                  </h6>
+                  <p>
+                    <a class="text-white" href="{% url 'blogs_index' %}">Blogs</a>
+                  </p>
+                  <p>
+                    <a class="text-white">Courses</a>
+                  </p>
+                  <p>
+                    <a class="text-white">Backlinks</a>
+                  </p>
+                  <p>
+                    <a class="text-white">Video Tutorial</a>
+                  </p>
+                </div>
+
+                <!-- Grid column -->
+                <hr class="w-100 clearfix d-md-none" />
+
+                <!-- Grid column -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                  <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                  <p><i class="fa fa-home"></i> Jalandhar, Punjab</p>
+                  <p><i class="fa fa-envelope"></i> digamber1011@gmail.com</p>
+                  <p><i class="fa fa-paper-plane"></i> https://t.me/codinindia2020</p>
+                  <!-- <p><i class="fa fa-phone"></i> +91 7814574759</p> -->
+                </div>
+                <!-- Grid column -->
+              </div>
+              <!--Grid row-->
+            </section>
+            <!-- Section: Links -->
+
+            <hr class="my-3">
+
+            <!-- Section: Copyright -->
+            <section class="p-3 pt-0">
+              <div class="row d-flex align-items-center">
+                <!-- Grid column -->
+                <div class="col-md-7 col-lg-8 text-center text-md-start">
+                  <!-- Copyright -->
+                  <div class="p-3">
+                    © 2020 Copyright:
+                    <a class="text-white" href="/">codingindia.co.in</a>
+                  </div>
+                  <!-- Copyright -->
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <!-- <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
+                  <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
+                      class="fab fa-facebook-f"></i></a>
+
+                  <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
+                      class="fab fa-twitter"></i></a>
+
+                  <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
+                      class="fab fa-google"></i></a>
+
+                  <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
+                      class="fab fa-instagram"></i></a>
+                </div> -->
+                <!-- Grid column -->
+              </div>
+            </section>
+            <!-- Section: Copyright -->
+          </div>
+          <!-- Grid container -->
+        </footer>
+        <!-- Footer -->
+      </div>
+      <!-- End of .container -->
+      </div>
     </section>
   </section>
 
