--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -11,16 +11,36 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- {% load static %}
+
+    <link rel="icon" href="/path/to/favicon.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="{% static 'css/main.css' %}"> -->
+
+  <link rel="icon" href="{% static 'images/logo.ico' %}" type="image/x-icon">
+
   {% block css %}
   <link rel="stylesheet" href="../../../static/css/main.css" />
   {% endblock css %}
+
+  <style>
+     
+  </style>
 
 </head>
 
 <body>
   {% block content %}
   <header>
+    <div class="menu-button" id="menuButton">&#9776;</div>
+
+  <!-- Sidebar -->
+  <nav id="sidebar" class="sidebar">
+    <div class="close-button" id="closeButton">&times;</div>
+    <a href="#">Website Development</a>
+    <a href="#">Django Development</a>
+    <a href="#">Coding</a>
+    <!-- Add more options as needed -->
+  </nav>
     <video loop muted playsinline class="background-video">
       <source
         src="https://v4.cdnpk.net/videvo_files/video/free/video0485/large_watermarked/_import_61b593756995c2.98061119_FPpreview.mp4"
@@ -39,8 +59,7 @@
           class="m">&nbsp;</span><span class="m">W</span><span class="m">I</span><span class="m">T</span><span
           class="m">H</span><span class="m">&nbsp;</span> <span class="m">T</span><span class="m">E</span><span
           class="m">C</span><span class="m">H</span><span class="m">N</span><span class="m">O</span><span
-          class="m">L</span><span class="m">O</span><span class="m">G</span><span class="m">I</span><span
-          class="m">E</span><span class="m">S</span>
+          class="m">L</span><span class="m">O</span><span class="m">G</span><span class="m">Y</span>
       </h3>
     </div>
 
@@ -50,10 +69,10 @@
           <h4><a href="">Website Development</a></h4>
         </li>
         <li>
-          <h4><a href="">Machine Learning</a></h4>
+          <h4><a href="">AI/ML</a></h4>
         </li>
         <li>
-          <h4><a href="">Artificial Intelligence</a></h4>
+          <h4><a href="">Graphic Designing</a></h4>
         </li>
       </ul>
     </div>
@@ -64,10 +83,11 @@
 
     <section>
       <div id="parallax" class="parallax-item">
+        
         <div class="container row">
           <div class="col-md-6">
             <h2>Elevating Youth through Coding</h2>
-            <p>Welcome to our platform dedicated to "Empowering India with Technology." Our mission is to harness the
+            <p style="text-align: justify;">Welcome to our platform dedicated to "Empowering India with Technology." Our mission is to harness the
               transformative potential of technology to uplift the youth of India and drive the nation towards progress.
               We firmly believe in the power of coding and its ability to shape the future.</p>
             <div class="btn-group">
@@ -86,7 +106,7 @@
           </div>
           <div class="col-md-6">
             <h2>Coding: The Gateway to Possibilities</h2>
-            <p>Coding is more than just lines of text; it's the language of possibilities. From developing apps that
+            <p style="text-align: justify;">Coding is more than just lines of text; it's the language of possibilities. From developing apps that
               solve real-world challenges to designing websites that redefine user experiences, coding empowers the
               youth to turn their ideas into reality. With technology as the canvas and coding as the brush, they have
               the means to craft a better tomorrow.</p>
@@ -165,7 +185,7 @@
                         <img src="{% static 'images/ml.png' %}" alt="Learn Machine Learning">
                       </div>
                       <div class="solu_title">
-                        <h3>Machine Learning/h3>
+                        <h3>Machine Learning</h3>
                       </div>
                       <div class="solu_description">
                         <p>
@@ -281,19 +301,17 @@
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <!-- <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
-                  <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
-                      class="fab fa-facebook-f"></i></a>
+                <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
 
-                  <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
-                      class="fab fa-twitter"></i></a>
+                  <a class="btn btn-outline-light btn-floating m-1" href="https://t.me/codinindia2020" class="text-white" role="button"><i
+                      class="fa fa-paper-plane"></i></a>
 
-                  <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
-                      class="fab fa-google"></i></a>
+                  <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/codin_india/" class="text-white" role="button"><i
+                      class="fa fa-instagram"></i></a>
 
-                  <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
-                      class="fab fa-instagram"></i></a>
-                </div> -->
+                  <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/digamber-jha-5045221a5/" class="text-white" role="button"><i
+                      class="fa fa-linkedin-square"></i></a>
+                </div>
                 <!-- Grid column -->
               </div>
             </section>
@@ -319,6 +337,24 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   <!-- <script src="{% static 'js/main.js' %}"></script> -->
   <script src="../../../static/js/main.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // JavaScript to toggle sidebar
+    const menuButton = document.getElementById('menuButton');
+    const closeButton = document.getElementById('closeButton');
+    const sidebar = document.getElementById('sidebar');
+
+    menuButton.addEventListener('click', () => {
+      sidebar.style.right = '0';
+      closeButton.style.right = '30px';
+    });
+
+    closeButton.addEventListener('click', () => {
+      sidebar.style.right = '-250px';
+      closeButton.style.right = '-220px';
+    });
+  </script>
 </body>
 
 </html>
