--- a/CodingIndia/blogs/templates/blogs/index.html
+++ b/CodingIndia/blogs/templates/blogs/index.html
@@ -14,7 +14,17 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
 
+<div class="menu-button text-dark" id="menuButton" >&#9776;</div>
 
+<!-- Sidebar -->
+<nav id="sidebar" class="sidebar" style="z-index: 10000;">
+  <div class="close-button" id="closeButton">&times;</div>
+  <a href="/">Home</a>
+  <a href="#">Website Development</a>
+  <a href="#">Django Development</a>
+  <a href="#">Coding</a>
+  <!-- Add more options as needed -->
+</nav>
 <section class="mt-4">
 
     <div class="container">
@@ -45,7 +55,7 @@ integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQI
             <ul class="list-group">
 
             {%for blog in blogs %}
-                <a href="{% url 'readblog' blog.post_id %}"><li class="list-group-item col-md-12">{{blog.title}}</li></a>
+                <a href="{% url 'readblog' blog.post_id %}" style="text-decoration: none;"><li class="list-group-item col-md-12">{{blog.title}}</li></a>
             {%endfor%}
         </ul>
         </div>
