--- a/CodingIndia/blogs/templates/blogs/read_play.html
+++ b/CodingIndia/blogs/templates/blogs/read_play.html
@@ -1,4 +1,4 @@
-{% extends 'website/index.html' %}
+{% extends 'blogs/index.html' %}
 
 {% load static %}
 
@@ -8,9 +8,11 @@
 {% endblock title %}
 
 {% block meta %}
-    <meta name="keywords" content="blogs, coding india, html, python, css, SQL, Javascript, How to, Data Science, Data Science with Python, coding, programming, Tips, Learn to code, AI, ML, Tutorials, Codes, Courses, Learning">
-    <meta name="description" content="Coding india Blog page is one where you can read blogs on different topics like Data Science, machine Learning AI etc.">
-    <meta name="author" content="Coding India , Digamber Jha">
+<meta name="keywords"
+    content="blogs, coding india, html, python, css, SQL, Javascript, How to, Data Science, Data Science with Python, coding, programming, Tips, Learn to code, AI, ML, Tutorials, Codes, Courses, Learning">
+<meta name="description"
+    content="Coding india Blog page is one where you can read blogs on different topics like Data Science, machine Learning AI etc.">
+<meta name="author" content="Coding India , Digamber Jha">
 
 {% endblock meta %}
 
@@ -19,7 +21,18 @@
 </style>
 
 {% block content %}
-<div class="container">
+
+<!-- Sidebar -->
+<nav id="sidebar" class="sidebar" style="z-index: 10000;">
+    <div class="close-button" id="closeButton">&times;</div>
+    <a href="/">Home</a>
+    <a href="#">Website Development</a>
+    <a href="#">Django Development</a>
+    <a href="#">Coding</a>
+    <!-- Add more options as needed -->
+  </nav>
+  
+<div class="container" style="margin-bottom: 35px;">
     <h1 class="text-center mb-3 servicetitle mt-4"
         style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: 600;">
         {{play.name}} Blogs</h1>
@@ -37,8 +50,8 @@
                 </div>
             </div>
         </div>
-            {%endfor%}
-        </div>
+        {%endfor%}
+    </div>
 
-        </section>
-        {% endblock content %}
+</div>
+{% endblock content %}
