--- a/CodingIndia/blogs/templates/blogs/readblogs.html
+++ b/CodingIndia/blogs/templates/blogs/readblogs.html
@@ -11,6 +11,16 @@
 
 
 {% block content %}
+
+<nav id="sidebar" class="sidebar" style="z-index: 10000;">
+  <div class="close-button" id="closeButton">&times;</div>
+  <a href="/">Home</a>
+  <a href="#">Website Development</a>
+  <a href="#">Django Development</a>
+  <a href="#">Coding</a>
+  <!-- Add more options as needed -->
+</nav>
+
 <section class="mt-3">
   <div class="readhead container">
     <div class="row blogwidth">
@@ -24,7 +34,7 @@
           <h1 class="blog-post-title">{{blogs.title}}</h1>
           <p class="blog-post-meta">{{blogs.pub_date}} <a href="#"></a></p>
 
-          {{blogs.content|safe}}
+          <span style="text-align: justify;">{{blogs.content|safe}}</span>
         </article>
           <!-- {{blogs.tags|safe}} -->
 
@@ -33,7 +43,7 @@
       <div class="col-md-4">
         <div class="p-4 mb-3 bg-light rounded">
           <h4 class="fst-italic">About Us</h4>
-          <p class="mb-0">This is <strong>Coding India</strong> blog page. <strong>Coding India</strong> is a <em>Youtube
+          <p class="mb-0" style="text-align: justify;">This is <strong>Coding India</strong> blog page. <strong>Coding India</strong> is a <em>Youtube
               Channel</em> where you can learn coding and various concepts of coding skills. It wass est. in 2020. You
             can learn <strong>Python</strong>, <strong>Data Science</strong>,<strong>Full Stack web development</strong>
             and many more.</p>
