--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -36,7 +36,7 @@
   <!-- Sidebar -->
   <nav id="sidebar" class="sidebar">
     <div class="close-button" id="closeButton">&times;</div>
-    <a href="#">Blogs</a>
+    <a href="{% url 'blogs_index' %}">Blogs</a>
     <a href="#">Website Development</a>
     <a href="#">Django Development</a>
     <a href="#">Coding</a>
