--- a/CodingIndia/blogs/templates/blogs/read_play.html
+++ b/CodingIndia/blogs/templates/blogs/read_play.html
@@ -22,15 +22,21 @@
 
 {% block content %}
 
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+
+<div class="menu-button text-dark" id="menuButton" >&#9776;</div>
+
 <!-- Sidebar -->
 <nav id="sidebar" class="sidebar" style="z-index: 10000;">
-    <div class="close-button" id="closeButton">&times;</div>
-    <a href="/">Home</a>
-    <a href="#">Website Development</a>
-    <a href="#">Django Development</a>
-    <a href="#">Coding</a>
-    <!-- Add more options as needed -->
-  </nav>
+  <div class="close-button" id="closeButton">&times;</div>
+  <a href="/">Home</a>
+  <a href="#">Website Development</a>
+  <a href="#">Django Development</a>
+  <a href="#">Coding</a>
+  <!-- Add more options as needed -->
+</nav>
   
 <div class="container" style="margin-bottom: 35px;">
     <h1 class="text-center mb-3 servicetitle mt-4"
