--- a/CodingIndia/blogs/templates/blogs/readblogs.html
+++ b/CodingIndia/blogs/templates/blogs/readblogs.html
@@ -11,7 +11,15 @@
 
 
 {% block content %}
+{% load static %}
 
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+
+<div class="menu-button text-dark" id="menuButton" >&#9776;</div>
+
+<!-- Sidebar -->
 <nav id="sidebar" class="sidebar" style="z-index: 10000;">
   <div class="close-button" id="closeButton">&times;</div>
   <a href="/">Home</a>
@@ -21,18 +29,13 @@
   <!-- Add more options as needed -->
 </nav>
 
-<section class="mt-3">
-  <div class="readhead container">
-    <div class="row blogwidth">
+  <div class="readheads container">
+    <div class="row blogwidths">
       <div class="col-md-8">
-        <!-- <h5 class="pb-4 mb-4 fst-italic border-bottom">
-                by Codin India
-              </h5> -->
-
         <article class="blog-post">
             <p>{{i}}</p>
-          <h1 class="blog-post-title">{{blogs.title}}</h1>
-          <p class="blog-post-meta">{{blogs.pub_date}} <a href="#"></a></p>
+          <h1 class="blog-post-titles">{{blogs.title}}</h1>
+          <p class="blog-post-metas">{{blogs.pub_date}} <a href="#"></a></p>
 
           <span style="text-align: justify;">{{blogs.content|safe}}</span>
         </article>
