Working on updations

--- a/CodingIndia/blogs/templates/blogs/readblogs.html
+++ b/CodingIndia/blogs/templates/blogs/readblogs.html
@@ -34,7 +34,7 @@ integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQI
       <div class="col-md-8">
         <article class="blog-post">
             <p>{{i}}</p>
-          <h1 class="blog-post-titles">{{blogs.title}}</h1>
+          <h1 class="blog-post-titles text-dark">{{blogs.title}}</h1>
           <p class="blog-post-metas">{{blogs.pub_date}} <a href="#"></a></p>
 
           <span style="text-align: justify;">{{blogs.content|safe}}</span>
