--- a/CodingIndia/blogs/templates/blogs/read_play.html
+++ b/CodingIndia/blogs/templates/blogs/read_play.html
@@ -48,7 +48,7 @@ integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQI
         {%for blog in blogs %}
         <div class="col-md-3 mt-1">
             <div class="card" style="width: 17rem;">
-                <img style="width:100%; height: 150px;" src="{{blog.img.url}}" class="card-img-top imgs" alt="">
+                <img style="width:100%; height: 150px;" src="{{blog.img.url}}" loading="lazy" class="card-img-top imgs" alt="">
                 <div class="card-body">
                     <h5 class="card-title">{{blog.title|slice:"0:30"}}...</h5>
                     <p class="card-text">24, jan</p>
