Working on updations

--- a/CodingIndia/blogs/templates/blogs/readblogs.html
+++ b/CodingIndia/blogs/templates/blogs/readblogs.html
@@ -37,7 +37,7 @@ integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQI
           <h1 class="blog-post-titles text-dark">{{blogs.title}}</h1>
           <p class="blog-post-metas">{{blogs.pub_date}} <a href="#"></a></p>
 
-          <span style="text-align: justify;">{{blogs.content|safe}}</span>
+          <span style="text-align: justify;" class="text-dark">{{blogs.content|safe}}</span>
         </article>
           <!-- {{blogs.tags|safe}} -->
 
