--- a/CodingIndia/blogs/templates/blogs/index.html
+++ b/CodingIndia/blogs/templates/blogs/index.html
@@ -37,7 +37,7 @@ integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQI
                 <div class="card-body">
                   <h5 class="card-title">{{i.name}}</h5>
                   <p class="card-text">Coding India</p>
-                  <a href="{% url 'readplay' i.id %}" class="btn loginbtn">View Blogs</a>
+                  <a href="{% url 'readplay' i.id %}" class="btn loginbtn  btn-outline-dark">View Blogs</a>
                 </div>
               </div>
                 
