--- a/CodingIndia/blogs/templates/blogs/read_play.html
+++ b/CodingIndia/blogs/templates/blogs/read_play.html
@@ -49,11 +49,11 @@ integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQI
         <div class="col-sm-4 mb-3 mb-sm-0">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title blog-title">{{blog.title|slice:"0:30"}}...
+                    <h5 class="card-title blog-title">{{blog.title|slice:"0:80"}}...
                     </h5>
                     <div class="row">
                         <div class="col-sm-6">
-                            <p class="by-date">By <a href="">{{blog.author}}</a></p>
+                            <!-- <p class="by-date">By <a href="">{{blog.author}}</a></p> -->
                         </div>
                         <div class="col-sm-6">
                             <li class="by-date">{{blog.pub_date}}</li>
@@ -61,7 +61,7 @@ integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQI
                     </div>
                     <p class="card-text">{{blog.content|safe|slice:"0:50"}}...
                     </p>
-                    <a href="{% url 'readblog' blog.post_id %}" class="btn " style="letter-spacing: 1px;">Read More<ion-icon
+                    <a href="{% url 'readblog' blog.post_id %}" class="btn btn-outline-dark" style="letter-spacing: 1px;">Read More<ion-icon
                             name="arrow-forward-outline" class="mt-2 mx-2"></ion-icon> </a>
                 </div>
             </div>
