--- a/CodingIndia/blogs/templates/blogs/readblogs.html
+++ b/CodingIndia/blogs/templates/blogs/readblogs.html
@@ -70,7 +70,7 @@
 
       <article class="blog-post">
         <h2 class="display-5 link-body-emphasis mb-1 mt-4">{{blogs.title}}</h2>
-        <p class="blog-post-meta">{{blogs.pub_date}} by <a href="#">{{blogs.title}}</a></p>
+        <p class="blog-post-meta">{{blogs.pub_date}} by <a href="#">{{blogs.author}}</a></p>
 
         <p>{{blogs.content|safe}}</p>
     </div>
@@ -90,10 +90,7 @@
             <li>
               <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top"
                 href="#">
-                <!-- <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg"
-                  aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                  <rect width="100%" height="100%" fill="#777" />
-                </svg> -->
+               
                 <div class="col-lg-8">
                   <h6 class="mb-0">{{i.title|slice:"0:25"}}</h6>
                   <small class="text-body-secondary">{{i.pub_date}}</small>
@@ -104,7 +101,7 @@
           </ul>
         </div>
 
-        <div class="p-4">
+        <!-- <div class="p-4">
           <h4 class="fst-italic">Archives</h4>
           <ol class="list-unstyled mb-0">
             <li><a href="#">March 2021</a></li>
@@ -120,7 +117,7 @@
             <li><a href="#">May 2020</a></li>
             <li><a href="#">April 2020</a></li>
           </ol>
-        </div>
+        </div> -->
 
         <div class="p-4">
           <h4 class="fst-italic">Elsewhere</h4>
