--- a/CodingIndia/blogs/templates/blogs/read_play.html
+++ b/CodingIndia/blogs/templates/blogs/read_play.html
@@ -53,7 +53,7 @@ integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQI
                     </h5>
                     <div class="row">
                         <div class="col-sm-6">
-                            <!-- <p class="by-date">By <a href="">{{blog.author}}</a></p> -->
+                            <p class="by-date">By <a href="">{{blog.author}}</a></p>
                         </div>
                         <div class="col-sm-6">
                             <li class="by-date">{{blog.pub_date}}</li>
